noveno commit del proyecto final de paradigma de programacion año 2025

--- a/hotel_web_final.csproj
+++ b/hotel_web_final.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Castle.Core" Version="5.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="biblioteca_hotel">
       <HintPath>..\biblioteca_hotel\bin\Debug\biblioteca_hotel.dll</HintPath>
     </Reference>
